--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -20,7 +20,7 @@
 							<a class="nav-link pl-0 text-nowrap" href="/home"><h5><i class="fa fa-home fa-fw"></i> <span class="font-weight-bold">BINA@CCB</h5></span></a>
 						</li>
 <div class="dropdown">
-  <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>User</small> </span></a>
+  <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>Page Settings</small> </span></a>
   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
     <button class="dropdown-item" type="button">Edit informations</button>
     <button class="dropdown-item" type="button">Change password</button>
