--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -17,9 +17,9 @@
 						<img class="first-slide" src="{{imagee[0]}}" class="d-block w-100" alt="First slide" style="object-fit: cover ;width: 100%; height: 300px;">
 						<div class="container">
 							<div class="carousel-caption text-left">
-								<h1>test.</h1>
+								<h1>Gallery</h1>
 								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-								<p><a class="btn btn-lg btn-primary" href="#" role="button">Read more</a></p>
+								<p><a class="btn btn-lg btn-primary" href="#" role="button">Show more</a></p>
 							</div>
 						</div>
 					</div>
@@ -54,23 +54,49 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[6]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>BINA detector</h2>
+						<h2>Research</h2>
 						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[7]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>CCB</h2>
+						<h2>BINA detector</h2>
 						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[9]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>xxx</h2>
+						<h2>Experiments</h2>
 						<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 				</div><!-- /.row -->
+
+				<hr class="featurette-divider">
+				<div class="row featurette">
+					<div class="col-md-7">
+						<h2 class="featurette-heading">Purpose of research <span class="text-muted"> </span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5">
+						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
+
+				<hr class="featurette-divider">
+
+				<div class="row featurette">
+					<div class="col-md-7 order-md-2">
+						<h2 class="featurette-heading">Nuclear interactions <span class="text-muted"></span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+<h3>3NF etc...</h3>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5 order-md-1">
+						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
 
 				<hr class="featurette-divider">
 				<div class="row featurette">
@@ -87,7 +113,31 @@
 
 				<div class="row featurette">
 					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">CCB <span class="text-muted">(Cyclotron Centre Bronowice)</span></h2>
+						<h2 class="featurette-heading">Target and beam <span class="text-muted"></span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5 order-md-1">
+						<img src="{{imagee[6]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
+
+				<hr class="featurette-divider">
+				<div class="row featurette">
+					<div class="col-md-7">
+						<h2 class="featurette-heading">Backward Ball <span class="text-muted"></span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5">
+						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
+
+				<hr class="featurette-divider">
+
+
+				<div class="row featurette">
+					<div class="col-md-7 order-md-2">
+						<h2 class="featurette-heading">MWPC <span class="text-muted"></span></h2>
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5 order-md-1">
@@ -99,7 +149,7 @@
 
 				<div class="row featurette">
 					<div class="col-md-7">
-						<h2 class="featurette-heading">XXXXXX<span class="text-muted">Checkmate.</span></h2>
+						<h2 class="featurette-heading">Forward Wall <span class="text-muted"> (E and ΔE) </span></h2>
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5">
@@ -107,6 +157,40 @@
 					</div>
 				</div>
 
+
+				<hr class="featurette-divider">
+				<div class="row featurette">
+					<div class="col-md-7 order-md-2">
+						<h2 class="featurette-heading">Recent experiments <span class="text-muted"></span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5 order-md-1">
+						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
+
+				<hr class="featurette-divider">
+
+				<div class="row featurette">
+					<div class="col-md-7">
+						<h2 class="featurette-heading">2019 <span class="text-muted"> CCB </span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5">
+						<img src="{{imagee[2]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
+
+				<hr class="featurette-divider">
+				<div class="row featurette">
+					<div class="col-md-7 order-md-2">
+						<h2 class="featurette-heading">2016 <span class="text-muted"> CCB</span></h2>
+						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					</div>
+					<div class="col-md-5 order-md-1">
+						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
+					</div>
+				</div>
 				<hr class="featurette-divider">
 			</div><!-- /.container -->
 			
