--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -32,7 +32,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="/dashboard/presentations_m">from Meetings</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="/dashboard/presentations_c">Presentations</a>
+							<a class="dropdown-item" href="/dashboard/presentations_c">Other</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown">
