--- a/App/templates/world/home.html
+++ b/App/templates/world/home.html
@@ -51,11 +51,11 @@
           </div>
 
           <div class="p-3">
-            <h4 class="font-italic">Elsewhere</h4>
+            <h4 class="font-italic">Links</h4>
             <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Facebook</a></li>
+              <li><a href="#">CCB</a></li>
+              <li><a href="#">IFJ</a></li>
+              <li><a href="#">UŚ</a></li>
             </ol>
           </div>
         </aside><!-- /.blog-sidebar -->
