--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -30,16 +30,14 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Presentations</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="/dashboard/presentations_m">from Meetings</a>
+							<a class="dropdown-item" href="/dashboard/presentations/meetings">Meetings</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="/dashboard/presentations_c">Other</a>
+							<a class="dropdown-item" href="/dashboard/presentations/conferences">Conferences</a>
+							<a class="dropdown-item" href="/dashboard/presentations/posters">Posters</a>
 						</div>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Miscellaneous</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="/dashboard/posters">Posters</a>
-						</div>
+					<li class="nav-item">
+						<a class="nav-link" href="/dashboard/miscellaneous">Miscellaneous</a>
 					</li>
 				</ul>
 			</div>
