--- a/App/templates/dashboard/notes.html
+++ b/App/templates/dashboard/notes.html
@@ -13,7 +13,7 @@
 		<div class="card-header" id="headingTwo">
 			<h5 class="mb-0">
 				<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-					Collapsible Group Item #2
+					Note1
 				</button>
 			</h5>
 		</div>
@@ -27,7 +27,7 @@
 		<div class="card-header" id="headingThree">
 			<h5 class="mb-0">
 				<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-					Collapsible Group Item #3
+					Note2
 				</button>
 			</h5>
 		</div>
