--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -16,19 +16,20 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">BINA@CCB</a>
+			<a class="navbar-brand" href="#">Few Nucleon Experiments</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto ">
+
 				<li class="nav-item active">
-					<a class="nav-link" href="/">News <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/experiments">Experiment<span class="sr-only">(current)</span></a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="/experiments">Experiment</a>
+					<a class="nav-link" href="/home">... </a>
 				</li>
 
 				<li class="nav-item">
@@ -37,6 +38,10 @@
 
 				<li class="nav-item">
 					<a class="nav-link" href="/members">Members</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link" href="/home">For students </a>
 				</li>
 
 				<li class="nav-item">
@@ -50,7 +55,14 @@
 			</ul>
 
 			<ul class="navbar-nav flex-row ml-md-auto  d-md-flex">
-
+				
+				<li class="nav-item">
+					<a class="nav-link active" href="/#">ENG</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/#">PL</a> 
+				</li>
+				
 				<li class="nav-item">
 					{% if guest %}
 					<a class="btn btn-primary" href="/login" role="button"> Log in </a>
@@ -59,6 +71,7 @@
 					<a class="btn btn-primary" href="/logout" role="button"> Log out </a>
 					{% endif %}	
 				</li>
+
 			</ul>
 		</div>
 		</nav>
