--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -17,23 +17,24 @@
 				<div class="collapse navbar-collapse ">
 					<ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<li class="nav-item">
-							<a class="nav-link pl-0 text-nowrap" href="/home"><h5><i class="fa fa-home fa-fw"></i> <span class="font-weight-bold">BINA@CCB</h5></span></a>
+							<a class="nav-link pl-0 text-nowrap" href="/"><h5><i class="fa fa-home fa-fw"></i> <span class="font-weight-bold">BINA@CCB</h5></span></a>
 						</li>
 <div class="dropdown">
   <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>Page Settings</small> </span></a>
   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">Edit informations</button>
-    <button class="dropdown-item" type="button">Change password</button>
-    <button class="dropdown-item" type="button">Add user</button>
+    <button class="dropdown-item disabled" type="button">Edit informations</button>
+    <button class="dropdown-item disabled" type="button">Change password</button>
+    <button class="dropdown-item disabled" type="button">Add user</button>
   </div>
 </div>
 						<li class="nav-item">
 							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small></small> </span></a>
 						</li>
-
+<!--
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/edit/files"><i class="fa fa-plus-square"></i> <span class="d-none d-md-inline">Add files</span></a>
 						</li>
+-->
 						<div class="dropdown ">
 							 <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-pencil-square-o"></i> <span class="d-none d-md-inline">Edit</span></a>
 							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
