--- a/App/templates/dashboard/files/publications.html
+++ b/App/templates/dashboard/files/publications.html
@@ -22,7 +22,6 @@
 				<button type="button" class="btn btn-secondary">Apply</button>
 			</div>
 		</div>
-		
 	</div><br>
 	<table class="table table-striped">
 		<thead>
@@ -33,60 +32,58 @@
 				<th>Options</th>
 			</tr>
 		</thead>
-	 
 		<tbody>
-{% for pub in publications %}
-								<tr>
-									<td>{{pub.author}}</td>
-									<td>{{pub.title}}</td>
-									<td>{{pub.year|int}}</td>
-									<td><a class="nav-link active text-secondary " type="button" data-toggle="modal" data-target="#mod{{pub.id}}"><i class="fa fa-cogs"></i></a></td>
-								</tr>
-								
-<div class="modal fade" id="mod{{pub.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalCenterTitle">Options</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
+			{% for pub in publications %}
+			<tr>
+				<td>{{pub.author}}</td>
+				<td>{{pub.title}}</td>
+				<td>{{pub.year|int}}</td>
+				<td><a class="nav-link active text-secondary " type="button" data-toggle="modal" data-target="#mod{{pub.id}}"><h4><i class="fa fa-sliders"></h4></i></a></td>
+			</tr>
 
- <div align="left">
-<b>ID</b>:
-{{pub.id}}<hr>
-<b>Type</b>:
-{{pub.type}}<hr>
-<b>Title</b>:
-{{pub.title}}<hr>
-<b>Author</b>:
-{{pub.author}}<hr>
-<b>Year</b>:
-{{pub.year|int}}<hr>
-<b>Ref</b>:
-{{pub.reference}}<hr>
-<b>Description</b>:
-{{pub.desc}}<hr>
-<b>link</b>:
-{{pub.doi}}<hr>
-<b>path to file</b>:
-{{pub.link}}<hr>
-</div> 
+			<div class="modal fade" id="mod{{pub.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalCenterTitle">Options</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
 
+							 <div align="left">
+								<b>ID</b>:
+								{{pub.id}}<hr>
+								<b>Type</b>:
+								{{pub.type}}<hr>
+								<b>Title</b>:
+								{{pub.title}}<hr>
+								<b>Author</b>:
+								{{pub.author}}<hr>
+								<b>Year</b>:
+								{{pub.year|int}}<hr>
+								<b>Ref</b>:
+								{{pub.reference}}<hr>
+								<b>Description</b>:
+								{{pub.desc}}<hr>
+								<b>link</b>:
+								{{pub.doi}}<hr>
+								<b>path to file</b>:
+								{{pub.link}}<hr>
+							</div> 
+							
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-info" data-dismiss="modal">Edit</button>
+							<button type="button" class="btn btn-danger">Delete</button>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-info" data-dismiss="modal">Edit</button>
-				<button type="button" class="btn btn-danger">Delete</button>
-			</div>
-		</div>
-	</div>
-</div>
-{% endfor %}
+			{% endfor %}
 		</tbody>
 	</table>
-
 </div>
 
 <div class="modal fade" id="modnew" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -98,66 +95,64 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-		<div class="modal-body">
-			<form class="was-validated" method="post">
-				<div class="form-group">
-					<label>Title</label>
-					<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="" name="title" required>
-					<div class="invalid-feedback">Example invalid custom select feedback</div>
-				</div>
-				<div class="form-row">
-					<div class="form-group col-md-6">
-						<div class="form-group">
-							<label>Author</label>
-							<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="" name="author" required>
-							<div class="invalid-feedback">Example invalid custom select feedback</div>
+			<div class="modal-body">
+				<form class="was-validated" method="post">
+					<div class="form-group">
+						<label>Title</label>
+						<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="" name="title" required>
+						<div class="invalid-feedback">This field cannot be empty.</div>
+					</div>
+					<div class="form-row">
+						<div class="form-group col-md-6">
+							<div class="form-group">
+								<label>Author</label>
+								<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="" name="author" required>
+								<div class="invalid-feedback">This field cannot be empty.</div>
+							</div>
+						</div>
+						<div class="form-group col-md-6">
+							<div class="form-group">
+								<label>Year</label>
+								<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="" name="year" required>
+								<div class="invalid-feedback">This field cannot be empty.</div>
+							</div>
 						</div>
 					</div>
-					<div class="form-group col-md-6">
-						<div class="form-group">
-							<label>Year</label>
-							<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="" name="year" required>
-							<div class="invalid-feedback">Example invalid custom select feedback</div>
+					<div class="form-row">
+						<div class="form-group col-md-6">
+							<div class="form-group">
+								<label>Reference</label>
+								<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="ref" placeholder="">
+							</div>
+						</div>
+						<div class="form-group col-md-6">
+							<div class="form-group">
+								<label>Link</label>
+								<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="link" placeholder="">
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="form-row">
-					<div class="form-group col-md-6">
-						<div class="form-group">
-							<label>Reference</label>
-							<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="ref" placeholder="">
+					<div class="form-row">
+						<div class="form-group col-md-6">
+							<div class="form-group">
+								<label>Description</label>
+								<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="desc" placeholder="" >
+							</div>
+						</div>
+						<div class="form-group col-md-6">
+							<label>Upload</label>
+							<div class="custom-file">
+								<input type="file" class="custom-file-input" id="validatedCustomFile" name="file">
+								<label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+								<div class="invalid-feedback">This field cannot be empty.</div>
+							</div>
 						</div>
 					</div>
-					<div class="form-group col-md-6">
-						<div class="form-group">
-							<label>Link</label>
-							<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="link" placeholder="">
-						</div>
-					</div>
-				</div>
-				<div class="form-row">
-					<div class="form-group col-md-6">
-						<div class="form-group">
-							<label>Description</label>
-							<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="desc" placeholder="" >
-						</div>
-					</div>
-					<div class="form-group col-md-6">
-						<label>Upload</label>
-						<div class="custom-file">
-							<input type="file" class="custom-file-input" id="validatedCustomFile" name="file">
-							<label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
-							<div class="invalid-feedback">Example invalid custom file feedback</div>
-						</div>
-					</div>
-				</div>
-				<hr>
-				<button type="submit" class="btn btn-primary">Add</button>
-			</form>
+					<hr>
+					<button type="submit" class="btn btn-primary">Add</button>
+				</form>
+			</div>
 		</div>
-	</div>
- </div>
+	 </div>
 </div>
-
-
 {% endblock %}
