--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -119,7 +119,7 @@
 		<small><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">  <img src="https://img.shields.io/github/v/tag/aszadzinski/BINA-CCB.svg" class="figure-img img-fluid rounded" alt="badge-tag"> <img src="https://img.shields.io/github/last-commit/aszadzinski/BINA-CCB.svg" class="figure-img img-fluid rounded" alt="badge-last vommit"></a></small>
 		<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">	
 		<li class="nav-item">
-			<a class="nav-link" href="https://github.com/BINA-CCB/BINA-CCB.github.io"><i class="fa fa-github"></i> GitHub</a>
+			<a class="nav-link" href="https://github.com/aszadzinski/BINA-CCB.git"><i class="fa fa-github"></i> GitHub</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">© 2019 BINA@CCB</a>
