--- a/App/templates/world/publications.html
+++ b/App/templates/world/publications.html
@@ -2,37 +2,30 @@
 {% block body %}
 <div class="container">
 	<div class="card text-center" >
-
-		<div class="table-responsive">
-					<table class="table table-striped table-sm">
-						<thead>
-							<tr>
-								<th>Year</th>
-								<th>Title</th>
-								<th>Author</th>
-								<th>Download</th>
-							</tr>
-						</thead>
-						<tbody>
-{% for pub in publications %}
-							<tr>
-								<td>{{pub.year|int}}</td>
-								<td>{{pub.title}}</td>
-								<td>{{pub.author}}</td>
-								<td>
-									<div class="dropdown">
-											<a class="nav-link active text-secondary dropdown-toggle" type="button" id="dropdown1" data-toggle="dropdown"><i class="fa fa-cloud-download"></i></a>
-										<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-											<a class="dropdown-item"href="{{pub.doi}}">DOI</a>
-											<a class="dropdown-item" href="/publications/{{pub.link}}">Download</a>
-										</div>
-									</div>
-								</td>
-							</tr>
-{% endfor %}
-						</tbody>
-					</table>
-				</div>
+		 <div class="table-responsive">
+			<table class="table table-striped table-sm">
+				<thead>
+					<tr>
+						<th>Year</th>
+						<th>Title</th>
+						<th>Author</th>
+						<th>Download</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for pub in publications %}
+					<tr>
+						<td>{{pub.year|int}}</td>
+						<td>{{pub.title}}</td>
+						<td>{{pub.author}}</td>
+						<td>
+							<a class="dropdown-item"href="{{pub.doi}}"><i class="fa fa-cloud-download fa-fw"></i></a>
+						</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
 {% endblock %}
