--- a/App/templates/dashboard/files/presentations.html
+++ b/App/templates/dashboard/files/presentations.html
@@ -11,6 +11,12 @@
 			<div class="collapse" id="collapseExample">
 				<div class="input-group"><hr>
 					<select class="custom-select" id="inputGroupSelect01">
+						<option selected>Tag</option>
+						<option value="1">SMCEBI</option>
+						<option value="2">IFJ</option>
+						<option value="3">both</option>
+					</select>
+					<select class="custom-select" id="inputGroupSelect01">
 						<option selected>Sort by</option>
 						<option value="1">Author</option>
 						<option value="2">Title</option>
