--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -6,48 +6,60 @@
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-					<li data-target="#myCarousel" data-slide-to="3"></li>
-					<li data-target="#myCarousel" data-slide-to="4"></li>
-					<li data-target="#myCarousel" data-slide-to="5"></li>
 				</ol>
 				<div class="carousel-inner" >
 					<div class="carousel-item active">
 						<img class="first-slide" src="{{imagee[0]}}" class="d-block w-100" alt="First slide" style="object-fit: cover ;width: 100%; height: 300px;">
 						<div class="container">
-							<div class="carousel-caption text-left">
-								<h1>Gallery</h1>
-								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-								<p><a class="btn btn-lg btn-primary" href="#" role="button">Show more</a></p>
+							<div class="carousel-caption text-center">
+								<button type="button" class="btn btn-success" data-toggle="modal" data-target="#gallery">Gallery</button>
 							</div>
 						</div>
 					</div>
-					<div class="carousel-item">
-						<img class="second-slide" src="{{imagee[1]}}" alt="Second slide" style="object-fit: cover ;width: 100%; height: 300px;">
-					</div>
-					<div class="carousel-item">
-						<img class="third-slide" src="{{imagee[2]}}" class="d-block w-100" alt="Third slide" style="object-fit: cover ;width: 100%; height: 300px;">
-					</div>
-					<div class="carousel-item">
-						<img class="third-slide" src="{{imagee[3]}}" class="d-block w-100" alt="Third slide" style="object-fit: cover ;width: 100%; height: 300px;">
-					</div>
-					<div class="carousel-item">
-						<img class="third-slide" src="{{imagee[4]}}" class="d-block w-100" alt="Third slide" style="object-fit: cover ;width: 100%; height: 300px;">
-					</div>
 				</div>
-				
-				<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
 			</div>
 		</div>
 	</div>
+
+
+	<div class="modal fade" id="gallery" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Gallery</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+
+					<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100" src="{{url_for('static', filename=collection[1].path)}}" alt="Photo 1">
+							</div>
+							{% for photo in collection %}
+							<div class="carousel-item">
+								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}">
+							</div>
+							{% endfor %}
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<div class="row">
 		<div class="col">
 			<div class="container marketing">
