Updated: Code optim; Deleted: some html files and unnecessary functions

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -53,7 +53,7 @@
 							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small>Data</small> </span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/publications"><i class="fa fa-folder"></i> <span class="d-none d-md-inline">Files</span></a>
+							<a class="nav-link pl-0" href="/dashboard/papers/publications"><i class="fa fa-folder"></i> <span class="d-none d-md-inline">Files</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/calendar"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Calendar</span></a>
