--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -12,11 +12,11 @@
 			<li class="nav-item dropdown">
 				<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Papers</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="/dashboard/publications">Publications</a>
-					<a class="dropdown-item" href="/dashboard/thesis">Thesis</a>
+					<a class="dropdown-item" href="/dashboard/papers/publications">Publications</a>
+					<a class="dropdown-item" href="/dashboard/papers/thesis">Thesis</a>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="/dashboard/manuals">Manuals</a>
-					<a class="dropdown-item" href="/dashboard/logbooks">LogBooks</a>
+					<a class="dropdown-item" href="/dashboard/papers/manuals">Manuals</a>
+					<a class="dropdown-item" href="/dashboard/papers/logbooks">LogBooks</a>
 				</div>
 			</li>
 			<li class="nav-item dropdown">
@@ -29,7 +29,7 @@
 				</div>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/dashboard/miscellaneous">Miscellaneous</a>
+				<a class="nav-link" href="/dashboard/presentations/miscellaneous">Miscellaneous</a>
 			</li>
 		</ul>
 	</div>
