--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -49,7 +49,7 @@
 				</li>
 				{% if admin %}
 				<li class="nav-item">
-					<a class="nav-link" href="/dashboard">Dashboard</a>
+					<a class="nav-link" href="/dashboard/papers/publications">Dashboard</a>
 				</li>
 				{% endif %}
 			</ul>
